# personal-website

./: .gitignore  .gitmodules  Makefile  README.md  dev-requirements.txt  pelicanconf.py  publishconf.py  pyproject.toml
content/journal/: circlean.md  covid-19-experience.md  return-statement.md  site-update.md  stenomod-setup.md
content/pages/: about.md  about.rst  test.rst
content/writing/: Return-Statement.md  asyncio-basics.md  bicycle-musings.md  circlean.md  covid-19-long-term.md  mapbox-postmortem.md  naming-things.md  pairing.md  recycling.md  return-statement.md  stenomod-setup.md  stub.md  understanding-subnet-masks.rst
docs/: CNAME  README.md  about.html  index.html  journal.html  writing.html
docs/feeds/: all-en.atom.xml  atom.xml  journal.atom.xml  writing.atom.xml
docs/journal/: bicycle-musings.html  circlean.html  covid-19-experience.html  covid-19-long-term.html  mapbox-postmortem-interview.html  recycling.html  return-statement.html  site-update.html  stenomod-setup.html
docs/writing/: asyncio-basics.html  bicycle-musings.html  circlean.html  covid-19-experience.html  covid-19-long-term.html  mapbox-postmortem-interview.html  naming-things.html  pairing.html  recycling.html  return-statement.html  site-update.html  stenomod-setup.html  subnet-masks.html
output/: CNAME  README.md  archives.html  authors.html  categories.html  index.html  tags.html  testing.html
output/author/: daniel-puttick.html
output/category/: blogpost.html
output/feeds/: all.atom.xml
output/pages/: about.html  (+1 more)
test/: pelicanconf.py  publishconf.py
(+8 files in other folders)
